Resolves: tdf#107438 write <text:sender-initials> for fields

Only in <office:annotation> context write <loext:sender-initials>

Broken since

    commit 5f8476c00f482ab5c8707de2ebdcd41faa4057fc
    Date:   Fri Dec 13 23:21:46 2013 +0100

and

    commit 49f9694e34d07468cff4a7e4de332f11be3e0dd8
    Date:   Fri Dec 13 23:30:34 2013 +0100

Change-Id: I48b146b779878bf0faa5830a721559d8e864dd33
(cherry picked from commit 29f250c428953750ce89dec7ee961723478609c1)
Reviewed-on: https://gerrit.libreoffice.org/39012
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>